# OpenHarmony_sdk

base/security/permission_lite/services/: BUILD.gn
base/startup/init/interfaces/innerkits/syspara/: BUILD.gn  param_comm.c  param_comm.h  parameter.c
base/update/updater/: BUILD.gn  bundle.json  updater_default_cfg.gni
base/update/updater/interfaces/kits/diff_patch/: BUILD.gn  diff_patch_interface.cpp
base/update/updater/interfaces/kits/misc_info/: BUILD.gn  misc_info.cpp
base/update/updater/interfaces/kits/slot_info/: BUILD.gn  slot_info.cpp
base/update/updater/interfaces/kits/updaterkits/: BUILD.gn  updaterkits.cpp
base/update/updater/resources/: BUILD.gn
base/update/updater/resources/font/: README.md
base/update/updater/resources/rk3568/pages/: config.json  confirm.json  menu.json  rk3568.json  upd.json
base/update/updater/resources/rk3568/string/: string.json
base/update/updater/services/: BUILD.gn  main.cpp  updater.cpp  updater_main.cpp  updater_main.h  updater_preprocess.cpp  updater_utils.cpp
base/update/updater/services/applypatch/: BUILD.gn  block_set.cpp  block_writer.cpp  command.cpp  command_function.cpp  command_process.cpp  command_process.h  data_writer.cpp  partition_record.cpp  raw_writer.cpp  raw_writer.h  store.cpp  transfer_manager.cpp
base/update/updater/services/diffpatch/: BUILD.gn  diff_main.cpp  diffpatch.cpp  diffpatch.h
base/update/updater/services/diffpatch/bzip2/: bzip2_adapter.cpp  bzip2_adapter.h  deflate_adapter.h  lz4_adapter.cpp  lz4_adapter.h  zip_adapter.cpp  zip_adapter.h
base/update/updater/services/diffpatch/diff/: BUILD.gn  blocks_diff.cpp  blocks_diff.h  image_diff.cpp  image_diff.h  update_diff.cpp  update_diff.h
base/update/updater/services/diffpatch/patch/: BUILD.gn  blocks_patch.cpp  blocks_patch.h  image_patch.cpp  image_patch.h  update_patch.cpp
base/update/updater/services/etc/: init.cfg
base/update/updater/services/flashd/: BUILD.gn  Readme.md  partition.cpp  partition.h
base/update/updater/services/flashd/common/: flashd_define.h
base/update/updater/services/flashd/daemon/: commander.cpp  commander.h  commander_factory.cpp  commander_factory.h  daemon.cpp  daemon_updater.cpp  daemon_updater.h  erase_commander.cpp  erase_commander.h  flash_commander.cpp  flash_commander.h  flashd_main.cpp  flashd_utils.cpp  flashd_utils.h  format_commander.cpp  format_commander.h  system_depend.cpp  update_commander.cpp  update_commander.h
base/update/updater/services/flashd/image_writer/: image_writer.cpp  image_writer.h
base/update/updater/services/fs_manager/: BUILD.gn  cmp_partition.cpp  do_partition.cpp  mount.cpp  partition_const.h  partitions.cpp
base/update/updater/services/hdi/client/: update_hdi_client.cpp  update_hdi_client.h
base/update/updater/services/hdi/server/: BUILD.gn  update_hdi_impl.cpp  update_hdi_impl.h
base/update/updater/services/include/applypatch/: apply_patch.h  block_set.h  block_writer.h  command.h  command_function.h  data_writer.h  partition_record.h  store.h  transfer_manager.h  updater_env.h
base/update/updater/services/include/flashd/: flashd.h
base/update/updater/services/include/fs_manager/: cmp_partition.h  mount.h  partitions.h
base/update/updater/services/include/log/: dump.h  log.h
base/update/updater/services/include/package/: cert_verify.h  packages_info.h  pkg_manager.h
base/update/updater/services/include/patch/: update_patch.h
base/update/updater/services/include/script/: script_instruction.h  script_manager.h
base/update/updater/services/include/updater/: updater.h  updater_const.h  updater_preprocess.h
base/update/updater/services/log/: BUILD.gn  dump.cpp  log.cpp
base/update/updater/services/package/: BUILD.gn
base/update/updater/services/package/pkg_algorithm/: pkg_algo_deflate.cpp  pkg_algo_deflate.h  pkg_algo_digest.cpp  pkg_algo_digest.h  pkg_algo_lz4.cpp  pkg_algo_lz4.h  pkg_algo_sign.cpp  pkg_algo_sign.h  pkg_algorithm.cpp  pkg_algorithm.h
base/update/updater/services/package/pkg_manager/: pkg_managerImpl.cpp  pkg_manager_impl.h  pkg_stream.cpp  pkg_stream.h  pkg_utils.cpp  pkg_utils.h
base/update/updater/services/package/pkg_package/: packages_info.cpp  pkg_gzipfile.cpp  pkg_gzipfile.h  pkg_lz4file.cpp  pkg_lz4file.h  pkg_pkgfile.cpp  pkg_pkgfile.h  pkg_upgradefile.cpp  pkg_upgradefile.h  pkg_zipfile.cpp  pkg_zipfile.h
base/update/updater/services/package/pkg_verify/: cert_verify.cpp  openssl_util.cpp  (+7 more)
base/update/updater/services/ptable_parse/: BUILD.gn  ptable.cpp  ptable.h  ptable_manager.cpp  ptable_manager.h  ufs_ptable.cpp  ufs_ptable.h
base/update/updater/services/script/: BUILD.gn  generate_yacc.py
base/update/updater/services/ui/: BUILD.gn  updater_ui.cpp  updater_ui.h  updater_ui_config.cpp  updater_ui_config.h  updater_ui_empty.h  updater_ui_env.cpp  updater_ui_env.h  updater_ui_facade.cpp  updater_ui_facade.h  updater_ui_stub.h  updater_ui_tools.cpp  updater_ui_tools.h  updater_ui_traits.h
base/update/updater/services/updater_binary/: BUILD.gn  main.cpp  update_image_block.cpp  update_image_block.h  update_image_patch.cpp  update_image_patch.h  update_partitions.cpp  update_partitions.h  update_processor.cpp  update_processor.h
base/update/updater/test/unittest/: BUILD.gn  unittest_comm.h
base/update/updater/utils/: BUILD.gn  updater_reboot.cpp  utils.cpp  write_updater.cpp
base/update/updater/utils/include/: error_code.h  macros.h  scope_guard.h  utils.h
base/update/updater/utils/json/: json_node.cpp  json_node.h  json_visitor.h  traits_util.h
device/board/csg/gd32f4xx_board/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  gd32f470_defconfig  ohos.build
device/board/csg/gd32f4xx_board/application/: BUILD.gn
device/board/csg/gd32f4xx_board/liteos_m/: BUILD.gn  config.gni
device/board/csg/stm32l4_board/liteos_m/: BUILD.gn  config.gni
device/soc/artery/at32f4xx/liteos_m/: BUILD.gn
device/soc/gigadevice/gd32f4xx/board/: .BUILD.gn.swp  BUILD.gn
device/soc/hdsc/hc32f4xx/board/: BUILD.gn  main.c  target_config.h  task_demo.c
device/soc/stm/stm32l4xx/sdk/: BUILD.gn
(+3674 files in other folders)
