# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

if (os_level != "mini") {
  lite_component("permission_lite") {
    deps = [ "pms_base:pms_base" ]

    features = [
      "ipc_auth:ipc_auth_target",
      "pms:pms_target",
      "pms_client:pms_client",
    ]

    if (ohos_build_type == "debug") {
      features += [ "unittest:unittest" ]
    }
  }
} else {
  lite_component("permission_lite") {
    features = [ "pms:pms_target_static" ]
  }
}
