# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updater/updater_default_cfg.gni")
import("//build/ohos.gni")

updater_resources_list = [
  "font.png",
  "icon_error.png",
  "progress_empty.png",
  "progress_fill.png",
  "loop00000.png",
  "loop00001.png",
  "loop00002.png",
  "loop00003.png",
  "loop00004.png",
  "loop00005.png",
  "loop00006.png",
  "loop00007.png",
  "loop00008.png",
  "loop00009.png",
  "loop00010.png",
  "loop00011.png",
  "loop00012.png",
  "loop00013.png",
  "loop00014.png",
  "loop00015.png",
  "loop00016.png",
  "loop00017.png",
  "loop00018.png",
  "loop00019.png",
  "loop00020.png",
  "loop00021.png",
  "loop00022.png",
  "loop00023.png",
  "loop00024.png",
  "loop00025.png",
  "loop00026.png",
  "loop00027.png",
  "loop00028.png",
  "loop00029.png",
  "loop00030.png",
  "loop00031.png",
  "loop00032.png",
  "loop00033.png",
  "loop00034.png",
  "loop00035.png",
  "loop00036.png",
  "loop00037.png",
  "loop00038.png",
  "loop00039.png",
  "loop00040.png",
  "loop00041.png",
  "loop00042.png",
  "loop00043.png",
  "loop00044.png",
  "loop00045.png",
  "loop00046.png",
  "loop00047.png",
  "loop00048.png",
  "loop00049.png",
  "loop00050.png",
  "loop00051.png",
  "loop00052.png",
  "loop00053.png",
  "loop00054.png",
  "loop00055.png",
  "loop00056.png",
  "loop00057.png",
  "loop00058.png",
  "loop00059.png",
  "loop00060.png",
  "loop00061.png",
  "font/HarmonyOS_Sans_SC_Regular_Small.ttf",
]

if (product_name == "rk3568") {
  updater_resources_list += [
    "${product_name}/images/icon/darkOUCOHlogo.png",
    "${product_name}/images/icon/lightOUCOHlogo.png",
    "${product_name}/images/icon/icon_failed.png",
    "${product_name}/images/icon/icon_ok.png",
    "${product_name}/images/warn/tips.png",
    "${product_name}/images/progress/dark_flash_00000.png",
    "${product_name}/images/progress/dark_flash_00001.png",
    "${product_name}/images/progress/dark_flash_00002.png",
    "${product_name}/images/progress/dark_flash_00003.png",
    "${product_name}/images/progress/dark_flash_00004.png",
    "${product_name}/images/progress/dark_flash_00005.png",
    "${product_name}/images/progress/dark_flash_00006.png",
    "${product_name}/images/progress/dark_flash_00007.png",
    "${product_name}/images/progress/dark_flash_00008.png",
    "${product_name}/images/progress/dark_flash_00009.png",
    "${product_name}/images/progress/dark_flash_00010.png",
    "${product_name}/images/progress/dark_flash_00011.png",
    "${product_name}/images/progress/dark_flash_00012.png",
    "${product_name}/images/progress/dark_flash_00013.png",
    "${product_name}/images/progress/dark_flash_00014.png",
    "${product_name}/images/progress/dark_flash_00015.png",
    "${product_name}/images/progress/dark_flash_00016.png",
    "${product_name}/images/progress/dark_flash_00017.png",
    "${product_name}/images/progress/dark_flash_00018.png",
    "${product_name}/images/progress/dark_flash_00019.png",
    "${product_name}/images/progress/dark_flash_00020.png",
    "${product_name}/images/progress/dark_flash_00021.png",
    "${product_name}/images/progress/flash_00000.png",
    "${product_name}/images/progress/flash_00001.png",
    "${product_name}/images/progress/flash_00002.png",
    "${product_name}/images/progress/flash_00003.png",
    "${product_name}/images/progress/flash_00004.png",
    "${product_name}/images/progress/flash_00005.png",
    "${product_name}/images/progress/flash_00006.png",
    "${product_name}/images/progress/flash_00007.png",
    "${product_name}/images/progress/flash_00008.png",
    "${product_name}/images/progress/flash_00009.png",
    "${product_name}/images/progress/flash_00010.png",
    "${product_name}/images/progress/flash_00011.png",
    "${product_name}/images/progress/flash_00012.png",
    "${product_name}/images/progress/flash_00013.png",
    "${product_name}/images/progress/flash_00014.png",
    "${product_name}/images/progress/flash_00015.png",
    "${product_name}/images/progress/flash_00016.png",
    "${product_name}/images/progress/flash_00017.png",
    "${product_name}/images/progress/flash_00018.png",
    "${product_name}/images/progress/flash_00019.png",
    "${product_name}/images/progress/flash_00020.png",
    "${product_name}/images/progress/flash_00021.png",
    "${product_name}/pages/config.json",
    "${product_name}/pages/rk3568.json",
    "${product_name}/pages/confirm.json",
    "${product_name}/pages/menu.json",
    "${product_name}/pages/upd.json",
    "${product_name}/string/string.json",
  ]
}

updater_resources_target = []

if (!updater_ui_support) {
  updater_resources_list = []
}

foreach(file, updater_resources_list) {
  _name = "$file"
  ohos_prebuilt_etc(_name) {
    source = "//base/update/updater/resources/$file"
    module_install_dir = "resources"
    if (file == "font/HarmonyOS_Sans_SC_Regular_Small.ttf") {
      module_install_dir = "user/data"
    } else if (get_path_info(file, "dir") != ".") {
      module_install_dir =
          get_path_info(string_replace(file, "${product_name}", "resources"),
                        "dir")
    }
    install_images = [ "updater" ]
    part_name = "updater"
    subsystem_name = "updater"
  }
  updater_resources_target += [ ":$_name" ]
}

group("updater_resources") {
  deps = updater_resources_target
}
